Adding an embedded Airtable form to submit additional companies

--- a/src/v3_build_website.ipynb
+++ b/src/v3_build_website.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,19 +54,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-09-30 13:08:20.307\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Imagine_Pediatrics.html\u001b[0m\n",
-      "\u001b[32m2024-09-30 13:08:20.400\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/98point6.html\u001b[0m\n",
-      "\u001b[32m2024-09-30 13:08:20.407\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Kevala.html\u001b[0m\n",
-      "\u001b[32m2024-09-30 13:08:20.418\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Rippling.html\u001b[0m\n",
-      "\u001b[32m2024-09-30 13:08:20.436\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Singularity_6_Palia.html\u001b[0m\n",
-      "\u001b[32m2024-09-30 13:08:20.444\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Pomelo_Care.html\u001b[0m\n"
+      "\u001b[32m2024-09-30 13:47:15.557\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Imagine_Pediatrics.html\u001b[0m\n",
+      "\u001b[32m2024-09-30 13:47:15.573\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/98point6.html\u001b[0m\n",
+      "\u001b[32m2024-09-30 13:47:15.580\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Kevala.html\u001b[0m\n",
+      "\u001b[32m2024-09-30 13:47:15.592\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Rippling.html\u001b[0m\n",
+      "\u001b[32m2024-09-30 13:47:15.609\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Singularity_6_Palia.html\u001b[0m\n",
+      "\u001b[32m2024-09-30 13:47:15.616\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Pomelo_Care.html\u001b[0m\n"
      ]
     },
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated ../docs/add_company.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "names_to_relative_urls = {\n",
+    "    result.target.company: f\"companies/{result.target.as_path_v2()}.html\"\n",
+    "    for result in results.values()\n",
+    "}\n",
+    "# print(templates.get_template(\"index.html\").render(names_to_relative_urls=names_to_relative_urls))\n",
+    "\n",
+    "with open(f\"{website_folder}/add_company.html\", 'w') as file:\n",
+    "    file.write(templates.get_template(\"add_company.html\").render(\n",
+    "        # names_to_relative_urls=names_to_relative_urls,\n",
+    "        title=\"Company Detective beta: Request an addition\",\n",
+    "        ))\n",
+    "    print(f\"Generated {website_folder}/add_company.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
