--- a/src/v3_refresh_company_data.ipynb
+++ b/src/v3_refresh_company_data.ipynb
@@ -13,23 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "title='Imagine Pediatrics | Virtual Health Care for Children' link='https://www.imaginepediatrics.org/' snippet=\"How it works · 1. Call us at (833) 208-7770 to see if your child is eligible. · 2. Download our 24/7 app from any app store. During our call, we'll help you\\xa0...\" formattedUrl='https://www.imaginepediatrics.org/'\n",
-      "title='Imagine Pediatrics | LinkedIn' link='https://www.linkedin.com/company/imagine-pediatrics' snippet='Imagine Pediatrics | 27415 followers on LinkedIn. Empowering families of children with medical complexity to get the care they deserve.' formattedUrl='https://www.linkedin.com/company/imagine-pediatrics'\n",
-      "title='Careers & Open Positions | Imagine Pediatrics' link='https://www.imaginepediatrics.org/careers' snippet='Flexible scheduling options with remote and onsite opportunities in Nashville and Houston. Excellent health, dental, vision, and 401K benefits.' formattedUrl='https://www.imaginepediatrics.org/careers'\n",
-      "title='Imagine Pediatrics PC: Bilingual Pediatrician' link='https://imaginepediatricsrome.com/' snippet='Imagine Pediatrics provides comprehensive, compassionate, and evidence based medical care for your children. Walk-ins welcome, Now Taking New Patients!' formattedUrl='https://imaginepediatricsrome.com/'\n",
-      "title='Leadership | Imagine Pediatrics' link='https://www.imaginepediatrics.org/leadership' snippet='We are a team of experienced leaders, physician executives, innovators and parents who are committed to building new and better ways to care for children with\\xa0...' formattedUrl='https://www.imaginepediatrics.org/leadership'\n",
-      "title='Imagine Pediatric Therapy - Chicago' link='https://www.imaginepeds.com/' snippet='A leading provider of pediatric therapy in Chicagoland. We provide individualized therapy services in a multi-disciplinary setting with a holistic intervention\\xa0...' formattedUrl='https://www.imaginepeds.com/'\n",
-      "title='Imagine Pediatrics - NHCC - Nashville' link='https://healthcarecouncil.com/members/imagine-pediatrics/' snippet='Imagine Pediatrics ... At Imagine Pediatrics, we provide 24/7 virtual-first care in the home for children, including those with complex medical and behavioral\\xa0...' formattedUrl='https://healthcarecouncil.com/members/imagine-pediatrics/'\n",
-      "title='Imagine Pediatrics Launches First-Of-Its-Kind Virtual Care Model for ...' link='https://www.businesswire.com/news/home/20231129385564/en/Imagine-Pediatrics-Launches-First-Of-Its-Kind-Virtual-Care-Model-for-Children-with-Medical-Complexity-and-Special-Health-Care-Needs' snippet='Nov 29, 2023 ... In partnership with health plans, Imagine Pediatrics uses a first-of-its-kind value-based, population health payment model to bring 24/7 medical\\xa0...' formattedUrl='https://www.businesswire.com/.../Imagine-Pediatrics-Launches-First-Of-Its-...'\n",
-      "title='Q&A: Imagine Pediatrics CEO George Boghos | Healthcare Innovation' link='https://www.hcinnovationgroup.com/population-health-management/complex-care/article/53080968/qa-imagine-pediatrics-ceo-george-boghos' snippet=\"Dec 19, 2023 ... Startup company's value-based payment model brings 24/7 medical, behavioral, and social care into the homes of Medicaid-eligible children\\xa0...\" formattedUrl='https://www.hcinnovationgroup.com/.../qa-imagine-pediatrics-ceo-george-b...'\n",
-      "title='Imagine Pediatrics (@imagine_pediatrics) • Instagram photos and ...' link='https://www.instagram.com/imagine_pediatrics/' snippet='Photo by Imagine Pediatrics on September 25, 2024. May be a graphic of poster. Imagine Pediatrics is here for you as the latest severe storm impacts Florida.' formattedUrl='https://www.instagram.com/imagine_pediatrics/'\n"
+      "title='Kevala: The Future of Healthcare Staffing' link='https://www.kevala.care/' snippet='Kevala brings together your entire workforce behind a single login, allowing your schedulers the unprecedented ability to balance shift coverage, cost-\\xa0...' formattedUrl='https://www.kevala.care/'\n",
+      "title='Kevala | Grid Intelligence Delivered' link='https://www.kevala.com/' snippet='Kevala equips energy leaders with advanced grid analytics to seamlessly integrate renewables, accurately predict electrification impacts, and enhance grid\\xa0...' formattedUrl='https://www.kevala.com/'\n",
+      "title='Kevala.net: Organic products – Kevala' link='https://kevala.net/' snippet='At Kevala, our passion is to find unique, organic, high-quality ingredients, bringing the best for our valued customers.' formattedUrl='https://kevala.net/'\n",
+      "title='Kevala Wellness and Ayurveda: Home' link='https://kevalawellness.com/' snippet='Our center offers a range of Ayurvedic services designed to rejuvenate, restore, and sustain your well-being through ancient wisdom.' formattedUrl='https://kevalawellness.com/'\n",
+      "title=\"Kevala's Sesame Oil – Kevala\" link='https://kevala.net/collections/sesame-oil' snippet='Our Sesame Oil is made only with the finest organic sesame seeds. These are cold pressed to obtain a delicious and rich flavor.' formattedUrl='https://kevala.net/collections/sesame-oil'\n",
+      "title='CPUC Cover Sheet Kevala EIS Part 1' link='https://docs.cpuc.ca.gov/PublishedDocs/Efile/G000/M508/K423/508423247.PDF' snippet='May 9, 2023 ... California has some of the most progressive environmental policies and greenhouse gas reduction goals in the world.' formattedUrl='https://docs.cpuc.ca.gov/PublishedDocs/Efile/G000/.../508423247.PDF'\n",
+      "title='Kevala Retreat – A Midwestern Dhamma Refuge for contemplative ...' link='https://www.kevalaretreat.org/' snippet='…deepening wisdom, cultivating peace. Kevala Retreat is a Buddha-Dhamma refuge in southwestern Wisconsin that hosts individual and small group self-retreats for\\xa0...' formattedUrl='https://www.kevalaretreat.org/'\n",
+      "title='Kevala Organic Sesame Tahini, 32 Ounce : Grocery ... - Amazon.com' link='https://www.amazon.com/Kevala-Organic-Sesame-Tahini-Ounce/dp/B014X4UPQW' snippet='Features · The Tahini for the perfect hummus! · Made with USDA Organic Sesame Seeds – Slightly roasted & hulled · Non-GMO Project Verified · Kosher · Gluten-\\xa0...' formattedUrl='https://www.amazon.com/Kevala-Organic-Sesame-Tahini.../B014X4UPQW'\n",
+      "title='Todd Owens - Kevala | LinkedIn' link='https://www.linkedin.com/in/toddowens2001' snippet=\"Mar 12, 2018 ... Experience: Kevala · Education: Harvard Business School · Location: Kirkland · 500+ connections on LinkedIn. View Todd Owens' profile on\\xa0...\" formattedUrl='https://www.linkedin.com/in/toddowens2001'\n",
+      "title='Kevala Counseling, LLC | Therapy in Lacey, WA' link='https://healingthepast.com/' snippet='Deep healing for life issues is possible. Kevala Counseling, LLC offers therapy and coaching for individuals, couples, and parents in Lacey, WA and online.' formattedUrl='https://healingthepast.com/'\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
     "# optionally, help find the URL for the seed\n",
     "from google_search import search\n",
     "\n",
-    "for result in search(\"Imagine Pediatrics\"):\n",
+    "for result in search(\"Kevala\"):\n",
     "    print(result)"
    ]
   },
