Running the pipeline from Airtable!

--- a/src/v3_build_website.ipynb
+++ b/src/v3_build_website.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['../output/data/Imagine_Pediatrics.json', '../output/data/98point6.json', '../output/data/Kevala.json', '../output/data/Rippling.json', '../output/data/Singularity_6_Palia.json', '../output/data/Pomelo_Care.json']\n"
+      "['../output/data/Imagine_Pediatrics.json', '../output/data/98point6.json', '../output/data/Akili_Interactive.json', '../output/data/Synthesize_Bio.json', '../output/data/Kevala.json', '../output/data/Rippling.json', '../output/data/Singularity_6_Palia.json', '../output/data/Pomelo_Care.json']\n"
      ]
     }
    ],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,19 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-09-30 13:47:15.557\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Imagine_Pediatrics.html\u001b[0m\n",
-      "\u001b[32m2024-09-30 13:47:15.573\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/98point6.html\u001b[0m\n",
-      "\u001b[32m2024-09-30 13:47:15.580\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Kevala.html\u001b[0m\n",
-      "\u001b[32m2024-09-30 13:47:15.592\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Rippling.html\u001b[0m\n",
-      "\u001b[32m2024-09-30 13:47:15.609\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Singularity_6_Palia.html\u001b[0m\n",
-      "\u001b[32m2024-09-30 13:47:15.616\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Pomelo_Care.html\u001b[0m\n"
+      "\u001b[32m2024-10-02 10:41:20.952\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Imagine_Pediatrics.html\u001b[0m\n",
+      "\u001b[32m2024-10-02 10:41:20.969\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/98point6.html\u001b[0m\n",
+      "\u001b[32m2024-10-02 10:41:20.975\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Akili_Interactive.html\u001b[0m\n",
+      "\u001b[32m2024-10-02 10:41:20.980\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Synthesize_Bio.html\u001b[0m\n",
+      "\u001b[32m2024-10-02 10:41:20.987\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Kevala.html\u001b[0m\n",
+      "\u001b[32m2024-10-02 10:41:21.000\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Rippling.html\u001b[0m\n",
+      "\u001b[32m2024-10-02 10:41:21.018\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Singularity_6_Palia.html\u001b[0m\n",
+      "\u001b[32m2024-10-02 10:41:21.026\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36munified\u001b[0m:\u001b[36mto_html_file\u001b[0m:\u001b[36m276\u001b[0m - \u001b[1mWritten to ../docs/companies/Pomelo_Care.html\u001b[0m\n"
      ]
     },
     {
@@ -75,6 +77,8 @@
      "text": [
       "Generated ../docs/companies/Imagine_Pediatrics.html\n",
       "Generated ../docs/companies/98point6.html\n",
+      "Generated ../docs/companies/Akili_Interactive.html\n",
+      "Generated ../docs/companies/Synthesize_Bio.html\n",
       "Generated ../docs/companies/Kevala.html\n",
       "Generated ../docs/companies/Rippling.html\n",
       "Generated ../docs/companies/Singularity_6_Palia.html\n",
@@ -96,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
