Cleanup the ingest script

--- a/src/builtin_to_airtable.ipynb
+++ b/src/builtin_to_airtable.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Populate Airtable by scraping Builtin\n",
+    "\n",
+    "This pulls several pages worth of companies from a Builtin site (like builtinseattle.com) and inserts the new ones into Airtable in the pending state.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -1815,7 +1824,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "pd.options.display.max_rows = 999\n",
+    "pd.options.display.max_rows = 100\n",
     "\n",
     "seattle_companies"
    ]
@@ -1998,10 +2007,9 @@
     }
    ],
    "source": [
-    "# Step 1: Get the existing Airtable data; we need to deduplicate\n",
+    "# Step 1: Get the existing Airtable data so that we can deduplicate\n",
     "import airtable\n",
     "\n",
-    "# NOTE: This doesn't always get all data... I \n",
     "airtable_df = airtable.load_into_pandas(status=None)\n",
     "airtable_df"
    ]
@@ -2277,6 +2285,7 @@
     "airtable_ready = seattle_companies.copy().reset_index()\n",
     "\n",
     "# Drop ones that are already in Airtable\n",
+    "# TODO: Deduplicate by the domain rather than the company name to better handle companies with official names like \"Hiya, Inc.\" but which should be searched for as \"Hiya\"\n",
     "airtable_ready = airtable_ready[~airtable_ready[\"name\"].isin(airtable_df[\"fields.Name\"])]\n",
     "\n",
     "# Adjust columns\n",
