Fixing imports until the one test in unified.py passes

--- a/src/notebooks/entrypoints/unified_summary.ipynb
+++ b/src/notebooks/entrypoints/unified_summary.ipynb
@@ -42,7 +42,7 @@
    ],
    "source": [
     "# optionally, help find the URL for the seed\n",
-    "from google_search import search\n",
+    "from src.utils.google_search import search\n",
     "\n",
     "for result in search(\"Kevala\"):\n",
     "    print(result)"
