--- a/src/notebooks/test/test_general_search.ipynb
+++ b/src/notebooks/test/test_general_search.ipynb
@@ -92,7 +92,7 @@
     }
    ],
    "source": [
-    "from general_search import search_web, summarize, result_to_markdown\n",
+    "from src.data_sources.general_search import search_web, summarize, result_to_markdown\n",
     "\n",
     "pages = search_web(target)\n",
     "summary = summarize(target, pages)\n",
