--- a/src/notebooks/test/test_glassdoor.ipynb
+++ b/src/notebooks/test/test_glassdoor.ipynb
@@ -88,7 +88,7 @@
    ],
    "source": [
     "# debug the search\n",
-    "from google_search import search\n",
+    "from src.utils.google_search import search\n",
     "\n",
     "query = f'site:www.glassdoor.com {target.company} {target.domain}'\n",
     "\n",
