--- a/src/notebooks/test/test_google_search.ipynb
+++ b/src/notebooks/test/test_google_search.ipynb
@@ -467,7 +467,7 @@
     }
    ],
    "source": [
-    "from google_search import search\n",
+    "from src.utils.google_search import search\n",
     "\n",
     "for i, result in enumerate(search(\"98point6\", num=100)):\n",
     "    # if \"indeed.com\" in result.link:\n",
