--- a/src/notebooks/test/test_news.ipynb
+++ b/src/notebooks/test/test_news.ipynb
@@ -146,7 +146,7 @@
     }
    ],
    "source": [
-    "from llm_utils import pack_documents\n",
+    "from src.utils.llm_utils import pack_documents\n",
     "\n",
     "print(\"Document lengths:\", [len(doc) for doc in new_article_markdowns])\n",
     "\n",
