--- a/src/notebooks/test/test_reddit.ipynb
+++ b/src/notebooks/test/test_reddit.ipynb
@@ -236,7 +236,7 @@
     }
    ],
    "source": [
-    "from llm_utils import pack_documents\n",
+    "from src.utils.llm_utils import pack_documents\n",
     "\n",
     "packed = pack_documents(thread_markdowns, 100000)\n",
     "[len(doc) for doc in packed]"
