Moving and updating the output file path

--- a/src/notebooks/entrypoints/diagrams.ipynb
+++ b/src/notebooks/entrypoints/diagrams.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "from diagrams.aws.storage import S3\n",
     "from diagrams.programming.flowchart import Document, MultipleDocuments\n",
     "\n",
-    "with Diagram(\"Company Detective\", show=False, filename=\"system_diagram\"):\n",
+    "with Diagram(\"Company Detective\", show=False, filename=\"../system_diagram\"):\n",
     "    source = Document(\"Company, product name\")\n",
     "\n",
     "    with Cluster(\"Reddit\"):\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -75,14 +75,14 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import Image\n",
-    "Image(filename=\"system_diagram.png\")"
+    "Image(filename=\"../system_diagram.png\")"
    ]
   },
   {
