Updating imports, not tested

--- a/src/notebooks/entrypoints/builtin_to_airtable.ipynb
+++ b/src/notebooks/entrypoints/builtin_to_airtable.ipynb
@@ -139,7 +139,7 @@
     }
    ],
    "source": [
-    "from builtin import scrape\n",
+    "from data_sources.builtin import scrape\n",
     "\n",
     "seattle_companies = scrape(\"seattle\", 5)"
    ]
