--- a/src/notebooks/test/test_news.ipynb
+++ b/src/notebooks/test/test_news.ipynb
@@ -77,7 +77,7 @@
     }
    ],
    "source": [
-    "from data_sources.news.scrape import request_article, response_to_article, article_to_markdown\n",
+    "from utils.scrape import request_article, response_to_article, article_to_markdown\n",
     "from data_sources.news.summarize import summarize\n",
     "\n",
     "# Fetch everything\n",
