Improve Google-Glassdoor for small companies (Wokelo in this case)

--- a/src/notebooks/test/test_glassdoor.ipynb
+++ b/src/notebooks/test/test_glassdoor.ipynb
@@ -24,17 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "30    (Dolly, Dolly, dolly.com, (delivery, moving))\n",
+       "33    (Dolly, Dolly, dolly.com, (moving, delivery))\n",
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,25 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[SearchResult(title='Working at Dolly | Glassdoor', link='https://www.glassdoor.com/Overview/Working-at-Dolly-EI_IE1638764.11,16.htm', snippet=\"Pros: You're always out and never stuck in a room. Cons: It is sometimes very difficult to complete a job.\", formattedUrl='https://www.glassdoor.com/.../Working-at-Dolly-EI_IE1638764.11,16.htm'),\n",
-       " SearchResult(title='Dolly Interview Questions (2024) | Glassdoor', link='https://www.glassdoor.com/Interview/Dolly-Interview-Questions-E1638764.htm', snippet='Jul 30, 2024 ... One of them was, “Tell me of a time you made a decision at your job which caused a big issue or negative repercussions” I answered honestly that\\xa0...', formattedUrl='https://www.glassdoor.com/.../Dolly-Interview-Questions-E1638764.htm'),\n",
-       " SearchResult(title='Working at Dolly Python | Glassdoor', link='https://www.glassdoor.com/Overview/Working-at-Dolly-Python-EI_IE9165827.11,23.htm', snippet=\"See what employees say it's like to work at Dolly Python. Salaries, reviews, and more - all posted by employees working at Dolly Python.\", formattedUrl='https://www.glassdoor.com/.../Working-at-Dolly-Python-EI_IE9165827.11...'),\n",
-       " SearchResult(title=\"Working at Dolly Parton's Stampede | Glassdoor\", link='https://www.glassdoor.com/Overview/Working-at-Dolly-Parton%E2%80%99s-Stampede-EI_IE822565.11,34.htm', snippet=\"100% of job seekers rate their interview experience at Dolly Parton's Stampede as positive. Candidates give an average difficulty score of 2 out of 5 (where 5\\xa0...\", formattedUrl='https://www.glassdoor.com/.../Working-at-Dolly-Parton’s-Stampede-EI_IE...'),\n",
-       " SearchResult(title='Dolly: Employee Benefits and Perks | Glassdoor', link='https://www.glassdoor.com/Benefits/Dolly-US-Benefits-EI_IE1638764.0,5_IL.6,8_IN1.htm', snippet='Full medical, dental, and vision insurance. Unlimited PTO and sick days. Ability to work from home dependent on your role. Free gym in the building.', formattedUrl='https://www.glassdoor.com/.../Dolly-US-Benefits-EI_IE1638764.0,5_IL.6,...'),\n",
-       " SearchResult(title='How Much Does Dolly Pay in 2024? (58 Salaries) | Glassdoor', link='https://www.glassdoor.com/Salary/Dolly-Salaries-E1638764.htm', snippet='A free inside look at Dolly salary trends based on 58 salaries wages for 44 jobs at Dolly. Salaries posted anonymously by Dolly employees.', formattedUrl='https://www.glassdoor.com/Salary/Dolly-Salaries-E1638764.htm'),\n",
-       " SearchResult(title=\"Dolly Parton's Stampede Reviews in Branson | Glassdoor\", link='https://www.glassdoor.com/Reviews/Dolly-Parton-s-Stampede-Branson-Reviews-EI_IE822565.0,23_IL.24,31_IM115.htm', snippet='It is pretty laid back, we work hard but the job is satisfying . You are surrounded by horses and other animals at all times, definitely a job for the animal\\xa0...', formattedUrl='https://www.glassdoor.com/.../Dolly-Parton-s-Stampede-Branson-Reviews-...'),\n",
-       " SearchResult(title=\"Dolly Parton's Stampede: Employee Benefits and Perks | Glassdoor\", link='https://www.glassdoor.com/Benefits/Dolly-Parton%E2%80%99s-Stampede-US-Benefits-EI_IE822565.0,23_IL.24,26_IN1.htm', snippet=\"Dolly Parton's Stampede benefits and perks, including insurance benefits, retirement benefits, and vacation policy. Reported anonymously by Dolly Parton's\\xa0...\", formattedUrl='https://www.glassdoor.com/.../Dolly-Parton’s-Stampede-US-Benefits-EI_IE...'),\n",
-       " SearchResult(title=\"Working at Dolly Parton's Imagination Library | Glassdoor\", link='https://www.glassdoor.com/Overview/Working-at-Dolly-Parton-s-Imagination-Library-EI_IE7235232.11,45.htm', snippet=\"See what employees say it's like to work at Dolly Parton's Imagination Library. Salaries, reviews, and more - all posted by employees working at Dolly\\xa0...\", formattedUrl='https://www.glassdoor.com/.../Working-at-Dolly-Parton-s-Imagination-Libr...'),\n",
-       " SearchResult(title='Dolly Helper Reviews | Glassdoor', link='https://www.glassdoor.com/Reviews/Dolly-Helper-Reviews-EI_IE1638764.0,5_KO6,12.htm', snippet='Horrible helper support. Company provides little in terms of resolving issues that could arise when performing tasks. You will not make $30/hr. You need to pay\\xa0...', formattedUrl='https://www.glassdoor.com/.../Dolly-Helper-Reviews-EI_IE1638764.0,5_K...')]"
+       "[SearchResult(title='Working at Dolly | Glassdoor', link='https://www.glassdoor.com/Overview/Working-at-Dolly-EI_IE1638764.11,16.htm', snippet='Dolly overview. 3.5☆ Work here? Claim your free Employer Profile · www.dolly.com; Seattle, WA; 1 to 50 Employees; 1 Location; Type: Company - Public; Revenue\\xa0...', formattedUrl='https://www.glassdoor.com/.../Working-at-Dolly-EI_IE1638764.11,16.htm')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +74,7 @@
     "# debug the search\n",
     "from utils.google_search import search\n",
     "\n",
-    "query = f'site:www.glassdoor.com {target.company} {target.domain}'\n",
+    "query = f'site:www.glassdoor.com {target.company} \"{target.domain}\"'\n",
     "\n",
     "urls = list(search(query, num=10))\n",
     "\n",
@@ -92,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +93,7 @@
        " 'https://www.glassdoor.com/Reviews/Dolly-Reviews-E1638764.htm')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
