Making it run again now that the domain is required

--- a/src/notebooks/test/test_news.ipynb
+++ b/src/notebooks/test/test_news.ipynb
@@ -14,11 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = Seed.init(\"98point6\")\n",
+    "target = Seed.init(\"98point6\", \"98point6.com\")\n",
     "\n",
     "from data_sources.news.search import find_news_articles\n",
     "search_results = find_news_articles(target, num_results=10)"
@@ -155,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
